Update blog post title and date

--- a/_posts/2026-1-18-a-diary.md
+++ b/_posts/2026-1-18-a-diary.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "我的第一篇 GitHub 博客"
-date: 2026-1-15
+title: "音游水平难得的提升"
+date: 2026-1-18
 ---
 
-我这两天在malody上过了4K的Extra1和6K的3dan
+我这两天在malody上过了4K的Extra1和6K的3dan。当时我把谱面流速由原先的6速改为了8速，没想到手感提升不少，读谱难度也降低了一些，于是4K和6K就过段了...(LOL
 ![dan](/assets/4K-Ex1v3-clear.jpg)
 ![dan](/assets/6K-3dan-clear.jpg)
